# rep-cliente

./: CHECKLIST_ACCION.md  CMakeLists.txt  COMPARATIVA_CAMBIOS.md  DEBUG_LOGIN.md  DEBUG_LOGIN_COMPLETO.md  DEBUG_PASO_A_PASO.md  DIAGRAMAS.md  DOCUMENTACION.md  INDEX.md  INDICE_DOCUMENTACION.md  Main.qml  PLAN_MEJORAS.md  README_ANALISIS.md  RECOMENDACIONES_TECNICAS.md  RESUMEN_EJECUTIVO.md  RESUMEN_RAPIDO.md  SECURITY.md  SOLUCION_LOGIN_NULLPTR.md  main.cpp
api/: AdminService.cpp  AdminService.h  ApiConfig.h  AuthService.cpp  AuthService.h  BaseService.cpp  BaseService.h  EstudianteService.cpp  EstudianteService.h  ProfesorService.cpp  ProfesorService.h
core/: SessionManager.cpp  SessionManager.h
core/security/: ICredentialStore.h  QtKeychainCredentialStore.cpp  QtKeychainCredentialStore.h  SecureTokenStorage.cpp  SecureTokenStorage.h
guia/apis/: ActividadApi.txt  AdminApi.txt  AuthController.txt  EstudianteApi.jtxt  PreguntaApi.txt  ProfesorApi.txt  PublicCursoApi.txt  RegistroApi.txt
models/: ActividadModel.h  AdminDTOs.h  AuthDTOs.h  CursoModel.h  Enums.h  Estudiante.h  MateriaModel.h  PreguntaModel.cpp  PreguntaModel.h  Profesor.h  ProfesorDTOs.h  StudentDTOs.h  Usuario.h
qml/: Main.qml
qml/components/: DatePicker.qml  StatCard.qml
qml/pages/: ActivityManagementPage.qml  ActivityResolutionPage.qml  AdminDashboard.qml  AssignmentsManagementPage.qml  AttendancePage.qml  CourseManagementPage.qml  CoursesPage.qml  GradingPage.qml  LoginPage.qml  QuestionEditorPage.qml  ReportsPage.qml  StudentDashboard.qml  StudentsPage.qml  SubjectManagementPage.qml  TeacherDashboard.qml  UserManagementPage.qml
utils/: Logger.cpp  Logger.h  SecureTokenStorage.cpp  SecureTokenStorage.h  ValidationUtils.cpp  ValidationUtils.h
viewmodels/: AdminViewModel.cpp  AdminViewModel.h  EstudianteViewModel.cpp  EstudianteViewModel.h  LoginViewModel.cpp  LoginViewModel.h  ProfesorViewModel.cpp  ProfesorViewModel.h  ReportsViewModel.cpp  ReportsViewModel.h
